     in fact without USB support but used for USB devices, with some more
     information to make troubleshooting easier. [issue #2259, PR #2260]
   * Driver programs with debug tracing support via `-D` CLI option and/or
     the `NUT_DEBUG_LEVEL` environment variable now check those earlier in
     their life-time, so that initialization routine can be debugged. [#2259]

 - nut-driver-enumerator (NDE) service/script:
   * The optional daemon mode (primarily useful for systems which monitor
     a large and dynamic population of power devices) was enhanced with a
     `--daemon-after` variant which parses the configuration once before
     daemonization and this has a chance to fail while not forked off, as
     well as to allow only completing the service unit initialization when
     everything is actually ready to work (so further dependencies can start
     at the proper time). [#682]
   * Also applied other optimizations to the script implementation. [#682]

 - powerpanel text driver now handles status responses in any format and should
   support most devices. [#2156]

 - tripplite_usb driver now allows any device to match if a particular Unit ID
   was not specified in `ups.conf`. [PR #2297, issues #2282 and #2258]

 - snmp-ups driver:
   * added support for Eaton EMP002 sensor for ATS16 NM2 sub-driver. [#2286]
   * mapping table updates for apc-mib sub-driver. [#2264]

 - usbhid-ups driver:
   * `arduino-hid` subdriver was enhanced from "initial bare bones" experimental
     set of mapped data points to support some 20 more mappings to make it more
     useful as an UPS driver, not just a controller developer sandbox. [#2188]
   * `cps-hid` subdriver now supports devices branded as Cyber Energy and built
     by cooperation with Cyber Power Systems. [#2312]
   * The `onlinedischarge` configuration flag name was too ambiguous and got
     deprecated (will be supported but no longer promoted by documentation),