@@ -109,3 +109,18 @@ If you must really know *which* one, it will not!
 Force redundant call to `usb_set_altinterface()`, especially if needed
 for devices serving multiple USB roles where the UPS is not represented
 by the interface number `0` (default).
+
+*usb_config_index*::
+*usb_hid_rep_index*::
+*usb_hid_desc_index*::
+*usb_hid_ep_in*::
+*usb_hid_ep_out*::
+
+Force use of specific interface, endpoint, descriptor index etc. numbers,
+rather than defaulting to 0 (rarely other values in certain drivers for
+some devices known to use non-zero numbers). Specified as a hexadecimal
+number.
++
+As a rule of thumb for `usb_hid_desc_index` discovery, you can see larger
+`wDescriptorLength` values (roughly 600+ bytes) in reports of `lsusb` or
+similar tools.
