@@ -364,6 +364,11 @@ void storeval(const char *var, char *val)
 		||  !strcmp(var, "device")
 		||  !strcmp(var, "busport")
 		||  !strcmp(var, "usb_set_altinterface")
+		||  !strcmp(var, "usb_config_index")
+		||  !strcmp(var, "usb_hid_rep_index")
+		||  !strcmp(var, "usb_hid_desc_index")
+		||  !strcmp(var, "usb_hid_ep_in")
+		||  !strcmp(var, "usb_hid_ep_out")
 		||  !strcmp(var, "allow_duplicates")
 		||  !strcmp(var, "langid_fix")
 		||  !strcmp(var, "noscanlangid")
