@@ -119,14 +119,16 @@ static int powervar_claim(HIDDevice_t *hd)
 	case POSSIBLY_SUPPORTED:
 		/* by default, reject, unless the productid option is given */
 		if (getval("productid")) {
-			usb->hid_rep_index = 1;
+			if (!getval("usb_hid_rep_index"))
+				usb->hid_rep_index = 1;
 			return 1;
 		}
 		possibly_supported("Powervar", hd);
 		return 0;
 
 	case SUPPORTED:
-		usb->hid_rep_index = 1;
+		if (!getval("usb_hid_rep_index"))
+			usb->hid_rep_index = 1;
 		return 1;
 
 	case NOT_SUPPORTED:
